# post-ocr-correction-for-thesis

./: .gitignore  README.md  pyproject.toml
configs/: my_args.json
data/kubhist/: holdout_files.json
scripts/: prepare_json_for_post_ocr.py  run.py  run_post_ocr_pipeline.sh
src/post_ocr/: arguments.py  data.py  diff.py  training.py  utils.py
src/post_ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
